# axum-api

./: .env.example   Cargo.toml
src/: main.rs  state.rs
src/handlers/: health.rs
